Fix horizontal scroll bar in WFS features table (#9160)

--- a/web-ui/src/main/resources/catalog/style/gn_viewer.less
+++ b/web-ui/src/main/resources/catalog/style/gn_viewer.less
@@ -897,6 +897,7 @@ gn-features-tables,
       }
       .fixed-table-container {
         grid-area: main;
+        overflow-x: auto;
       }
       .fixed-table-pagination {
         grid-area: footer;
